Changelog
=========

0.7.1 - 
------------------

- Support for Ollama's structured output. 
  Use the `format` parameter to specify the output format as a JSON schema.
  [ggozad]

0.7.0 - 2024-12-29
------------------

- Enforce foreign key constraints in the sqlite db, to allow proper cascading deletes.
  [ggozad]

- Perist images in the chat history & sqlite db.
  [ggozad]

- Update OllamaLLM client to match the use of Pydantic in olllama-python.
  [ggozad]

- Gracefully handle exceptions in tools.
  [ggozad]

- Fix documentation on keymap example in the readme.
  [bartosz]

- Update the shortcuts for new chat and close chat.
  [pekcheey]


0.6.9 - 2024-11-23
------------------

- Simplify aiosql usage.
  [ggozad]

0.6.8 - 2024-11-20
------------------

- Fixed styling bug that obscured the chat tabs.
  [ggozad]

0.6.7 - 2024-11-19
------------------

- Support all textual built-in themes.
  [ggozad]

0.6.6 - 2024-11-13
------------------

- Replace can_view with can_view_partial following changes to Widget in textual.
  [ggozad]

0.6.5 - 2024-10-12
------------------

- Allow customizing select key bindings.
  [ggozad]

- Fixed erroneous OLLAMA_URL documentaion.
  [gerroon] 

- Documentation improvements.
  [tylerlocnguyen]

- When Ollama throws an exception while generating a response, capture
  it and show a notification to the user.
  [ggozad]

0.6.4 - 2024-09-28
------------------

- Command to pull/update model.
  [ggozad]

- ESC dismisses the splash screen.
  [ggozad]


0.6.3 - 2024-09-25
------------------

- Fix typo preventing build on FreeBSD.
  [nivit]

- Allow disabling the splash screen.
  [ggozad]

0.6.2 - 2024-09-25
------------------

- Fix creating a new chat when no chats are available.
  [ggozad]

- Fancy splash screen using textualeffects.
  [ggozad]

0.6.1 - 2024-09-24
------------------

- Add support for tools/function calling.
  [ggozad]

- Fix newline insertion in multi-line widget.
  [ggozad]

0.5.2 - 2024-09-06
------------------
